--- a/Gabriel_Informatica/css/style.css
+++ b/Gabriel_Informatica/css/style.css
@@ -19,11 +19,31 @@
 
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+a:hover {
+    color : black
+}
+
+
 .links{
     display: flex;
     gap: 30px;
 }
 
 .conteudo-principal {
+    background-color: white;
+    margin-left: 300px;
+    margin-right: 300px;
+    height: 1000px;
+}
+
+
+body {
+    background-image: url(../Imagens/Fundo.png);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     
 }
