--- a/Gabriel_Informatica/css/style.css
+++ b/Gabriel_Informatica/css/style.css
@@ -1,6 +1,21 @@
 
+
+/* 
+   paleta de cores:
+   EF6F6C
+   0476D9  
+   76E7CD
+*/
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 * {
     margin: 0;
+    font-family: 'open sans', sans-serif;
+}
+
+*::selection{
+    background-color: darkgray;
+    color: rgb(61, 44, 23);
 }
 
 
@@ -9,7 +24,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: #0476D9;
+    background-color: #2222FF;
     margin: 0;
     height: 80px;
     border-bottom-left-radius: 5px;
@@ -18,6 +33,8 @@
     color: white;
 
 }
+
+
 
 a {
     text-decoration: none;
@@ -33,12 +50,61 @@ a:hover {
     gap: 30px;
 }
 
+main {
+    text-align: center;
+
+    padding-top: 30px;
+}
+
+
 .conteudo-principal {
     background-color: white;
-    margin-left: 300px;
-    margin-right: 300px;
+    width: 1300px;
     height: 1000px;
+    margin: auto;
 }
+
+.primeira-sessao{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    margin-bottom: 40px;
+}
+
+.slogan{
+    font-size: 2.5em;
+    width: 400px;
+    text-align: left;
+    color: #00BCD5;
+    background-color: #2222FF;
+    padding: 20px;
+    border-radius: 30px;
+    font-weight: 500;
+    box-shadow: 4px 2px 4px #14148879;
+}
+#foco-slogan {
+    color: white;
+    font-weight: bold;
+}
+
+.tabela-servicos{
+    width: 600px;
+    margin: auto;
+    border-collapse: collapse;
+    
+}
+
+th, td {
+    border-bottom: 1px solid;
+    padding: 10px;
+}
+
+th {
+    color: white;
+    background-color: #EF6F6C;
+}
+
 
 
 body {
