--- a/Gabriel_Informatica/css/style.css
+++ b/Gabriel_Informatica/css/style.css
@@ -1,11 +1,3 @@
-
-
-/* 
-   paleta de cores:
-   EF6F6C
-   0476D9  
-   76E7CD
-*/
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 
@@ -19,19 +11,24 @@
     color: rgb(61, 44, 23);
 }
 
+img {
+    width: 300px;
+}
+
 
 .conteudo-navegacao{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: #2222FF;
+    background-color: #4d4c4c;
     margin: 0;
     height: 80px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     box-shadow: 1px 2px 3px #02152578;
     color: white;
+    margin-bottom: 40px;
 
 }
 
@@ -42,7 +39,7 @@
     color: white;
 }
 .links > a:hover {
-    color: rgba(185, 145, 145, 0.793);
+    color: #e3b3b3;
 }
 
 
@@ -53,8 +50,6 @@
 
 main {
     text-align: center;
-
-    padding-top: 30px;
 }
 
 
@@ -63,6 +58,11 @@ main {
     width: 1300px;
     height: auto;
     margin: auto;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    box-shadow: 1px 1px 10px rgb(155, 155, 155);
+
+    padding-bottom: 30px;
 }
 
 .primeira-sessao{
@@ -70,8 +70,9 @@ main {
     align-items: center;
     justify-content: flex-end;
     gap: 200px;
-    margin-bottom: 40px;
-    padding: 70px 0px;
+    height:500px;
+    padding: 70px 0px;    
+    
 }
 
 .slogan{
@@ -79,12 +80,12 @@ main {
     width: 600px;
     text-align: left;
     color: white;
-    background-color: #2222FF;
+    background-image: linear-gradient(-95deg, #282525, #4d4c4c);
     padding: 20px;
     text-shadow: 1px 1px 1px #00000080;
     border-start-start-radius: 30px;
-    font-weight: 700;
-    box-shadow: 4px 2px 4px #14148879;
+    font-weight: 500;
+    box-shadow: 2px 4px 4px #282525;
 }
 
 #foco-slogan {
@@ -101,19 +102,90 @@ main {
 }
 
 .banner{
-    background-color: #E84E40;
-    padding: 200px;
+    background-image: linear-gradient(-95deg, #282525, #4d4c4c);
+    height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
+
+.texto-banner {
+    
+    color: white;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.texto-banner > p{
+    font-size: 3em;
+}
+
+.texto-banner > em{
+    margin-top: 24px;
+    font-family: 'Archivo Black', sans-serif;
+    font-size: 2rem;
+    margin-bottom: 24px;
+    color: #00BCD5;
+}
+
+
+
 .botao-conferir {
     background-color: white;
     color: black;
     border-radius: 30px;
+    padding: 10px 20px;
+    text-align: center;
+    width: 100px;    
+    text-decoration: none;
+    font-size: 1.5em;    
+    box-shadow: 1px 2px 5px #2b2c2cbb;
+}
+.botao-conferir:hover {
+    background-color: #72cfdb;
 }
 
-.tabela-servicos{
+
+.lista {
+    width: 650px;
+    margin: 20px auto;
+    text-align: left;
+}
+h2{
+    font-size: 28px;
+}
+.lista > p, ol{
+    margin: 20px 0px;
+}
+
+
+#lista-vantagens{    
+    font-size: 16px;
+    border-bottom: 1px solid;
+    padding-bottom: 40px;
+    margin-bottom: 40px;
+}
+#lista-vantagens > li{
+    margin: 5px 0px;
+}
+
+
+
+
+    
+
+.campos-de-precos h2{
+    margin-bottom: 20px;
+}
+
+
+.campos-de-precos > table{
     width: 600px;
     margin: auto;
     border-collapse: collapse;
+    margin-bottom: 40px;
+    
     
 }
 
@@ -130,7 +202,7 @@ th {
 
 
 body {
-    background-image: url(../Imagens/Fundo.png);
+    background-image: linear-gradient(-95deg, #F4F4F4, #f1f1f1);
     background-attachment: fixed;
     background-repeat: no-repeat;
     
