--- a/Pagina-Loja-Informatica-HTML/css/style.css
+++ b/Pagina-Loja-Informatica-HTML/css/style.css
@@ -203,8 +203,93 @@ th {
 
 
 body {
-    background-image: linear-gradient(-95deg, #F4F4F4, #f1f1f1);
+    background-image: linear-gradient(-95deg, #a5dfe7, #dbe5e6);
     background-attachment: fixed;
     background-repeat: no-repeat;
     
+}
+
+fieldset {
+    border: 0px;
+}
+#pag-form{
+    padding-top: 40px;
+    width:  700px;
+    border-radius: 12px; 
+}
+
+#titulo-form {
+    font-size: 2.3em;
+    color: #48a8b5;
+}
+
+
+
+.formulario {
+    width: 700px;
+    margin: auto;
+}
+
+.informacoes-pessoais{
+    width: 300px;
+    margin: 20px auto 40px auto;
+    display: flex;
+    gap: 40px;
+    justify-content: space-around;
+}
+
+.campo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #48a8b5;
+}
+
+
+.input-campo{
+    border-radius: 12px;
+    padding: 4px 6px;
+    border: 1px solid #48a8b5;
+}
+
+.resposta-novidade{
+    margin: 12px;
+    display: flex;
+    gap: 30px;
+    
+}
+
+.mensagem-usuario{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    width: 360px;
+    margin:  30px auto;
+    color: #48a8b5;
+}
+
+#mensagem{
+    resize: none;
+    width: 360px;
+    border-color: #48a8b5;
+    border-radius: 5px;
+    max-lines: 5;
+}
+
+#mensagem:focus, .input-campo:focus {
+    background-color: #f2fbfc;
+}
+
+
+.botao-enviar{
+    border-radius: 12px;
+    padding: 5px 10px;
+    background-color: white;
+    border: 1px solid #48a8b5;
+    color: #48a8b5;
+}
+
+.botao-enviar:hover{
+    background-color: rgb(209, 255, 240);
 }
