--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ img {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: #4d4c4c;
+    background-color: #282525;
     margin: 0;
     height: 80px;
     border-bottom-left-radius: 5px;
@@ -39,7 +39,7 @@ img {
     color: white;
 }
 .links > a:hover {
-    color: #e3b3b3;
+    color: #48a8b5;
 }
 
 
@@ -97,7 +97,7 @@ main.formulario{
 
 #destaque{
     font-family: 'Archivo black';
-    color: #00BCD5;
+    color: #48a8b5;
     font-style: italic;
     font-weight: 900;
 }
@@ -127,7 +127,7 @@ main.formulario{
     font-family: 'Archivo Black', sans-serif;
     font-size: 2rem;
     margin-bottom: 24px;
-    color: #00BCD5;
+    color: #48a8b5;
 }
 
 
@@ -144,7 +144,7 @@ main.formulario{
     box-shadow: 1px 2px 5px #2b2c2cbb;
 }
 .botao-conferir:hover {
-    background-color: #72cfdb;
+    background-color: #48a8b5;
 }
 
 
