--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+
+@charset "UTF-8";
+
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 
@@ -212,15 +215,19 @@ body {
 fieldset {
     border: 0px;
 }
+
 .pag-form{
     padding-top: 40px;
     width:  700px;
     border-radius: 12px; 
+    
 }
 
-#titulo-form {
+.titulo-form {
     font-size: 2.3em;
     color: #48a8b5;
+    width: 700px;
+    margin: auto;
 }
 
 
@@ -238,6 +245,8 @@ fieldset {
     justify-content: space-around;
 }
 
+
+
 .campo {
     display: flex;
     flex-direction: column;
@@ -250,6 +259,7 @@ fieldset {
     border-radius: 12px;
     padding: 4px 6px;
     border: 1px solid #48a8b5;
+    margin-bottom: 5px;
 }
 
 .resposta-novidade{
@@ -293,3 +303,11 @@ fieldset {
 .botao-enviar:hover{
     background-color: rgb(209, 255, 240);
 }
+
+
+
+.split-screen {
+    display: inline-block;
+}
+
+
