--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,8 @@ fieldset {
 .pag-form{
     padding-top: 40px;
     width:  700px;
-    border-radius: 12px; 
+    border-radius: 12px;
+    margin-bottom: 40px; 
     
 }
 
@@ -237,9 +238,9 @@ fieldset {
     margin: auto;
 }
 
-.informacoes-pessoais{
+.dividir-tela{
     width: 300px;
-    margin: 20px auto 40px auto;
+    margin: 20px auto 20px auto;
     display: flex;
     gap: 40px;
     justify-content: space-around;
@@ -259,7 +260,7 @@ fieldset {
     border-radius: 12px;
     padding: 4px 6px;
     border: 1px solid #48a8b5;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
 }
 
 .resposta-novidade{
@@ -292,16 +293,17 @@ fieldset {
 }
 
 
-.botao-enviar{
+.botao-form{
     border-radius: 12px;
     padding: 5px 10px;
     background-color: white;
     border: 1px solid #48a8b5;
     color: #48a8b5;
+    font-size: 1.2em;
 }
 
-.botao-enviar:hover{
-    background-color: rgb(209, 255, 240);
+.botao-form:hover{
+    background-color: #f2fbfc;
 }
 
 
@@ -311,3 +313,22 @@ fieldset {
 }
 
 
+.espacar{
+    margin-bottom: 10px;
+}
+
+
+.markers{
+    padding: 20px;
+    width: 500px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    border-bottom: 1px solid;
+    margin-bottom: 10px;
+}
+
+#alinhar{
+    text-align: start;
+}
