--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ main.formulario{
     box-shadow: 1px 2px 5px #2b2c2cbb;
 }
 .botao-conferir:hover {
-    background-color: #48a8b5;
+    background-color: #899394;
 }
 
 
