--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 
+
 * {
     margin: 0;
     font-family: 'open sans', sans-serif;
+    
 }
 
 *::selection{
@@ -70,31 +72,40 @@ main.formulario{
 
 
 .primeira-sessao{
+    
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 200px;
+    align-items: flex-end;
+    flex-direction: column;
+    gap: 12px;
     height:500px;
-    padding: 70px 0px;    
+    padding: 70px 0px;  
+    width: 500px;  
+    margin: auto;
+    
     
 }
 
+.primeira-sessao > img {
+    width: 500px;
+    margin: 20px auto;
+}
+.primeira-sessao > p{
+    width: 400px;
+    padding-right: 0px;
+}
+
 .slogan{
-    font-size: 2.7rem;
+    font-size: 1.7rem;
     width: 600px;
-    text-align: left;
-    color: white;
-    background-image: linear-gradient(-95deg, #282525, #4d4c4c);
+    text-align: right;
+    font-style: italic;
+    
     padding: 20px;
     border-start-start-radius: 30px;
     font-weight: 500;
 }
 
-#foco-slogan {
-    font-size: 3.4rem;
-    color: white;
-    font-weight: bold;
-}
+
 
 #destaque{
     font-family: 'Archivo black';
@@ -109,7 +120,18 @@ main.formulario{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    margin-bottom: 30px;
+
 }
+
+.conteudo-bruto-split > img{
+    border-radius: 30px;
+    
+}
+
+
+
+
 
 .texto-banner {
     
@@ -149,15 +171,25 @@ main.formulario{
 }
 
 
-.lista {
+.conteudo-bruto {
     width: 650px;
     margin: 20px auto;
     text-align: left;
 }
+.conteudo-bruto-split {
+    width: 650px;
+    margin: 20px auto;
+    text-align: right;
+    display: flex;
+    gap: 50px;
+    align-items: center;
+
+}
+
 h2{
     font-size: 28px;
 }
-.lista > p, ol{
+.conteudo-bruto > p, ol{
     margin: 20px 0px;
 }
 
@@ -329,4 +361,11 @@ fieldset {
 
 #alinhar{
     text-align: start;
+}
+
+.copyright > p{
+    width: 500px;
+    margin: auto;
+    margin-right: 30px;
+    color: darkgrey;
 }
