--- a/css/style.css
+++ b/css/style.css
@@ -17,26 +17,35 @@
 }
 
 img {
-    width: 300px;
+    max-width: 300px;
 }
 
 
-.conteudo-navegacao{
+header{
+    height: 80px;
+    
+
+
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center; 
+    
+    
     background-color: #282525;
-    margin: 0;
-    height: 80px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     box-shadow: 1px 2px 3px #02152578;
     color: white;
-    margin-bottom: 40px;
 
+
+    position: fixed;
+    width: 100%;
+
+    top: 0;
 }
-.conteudo-navegacao > h1{
+
+header > h1{
     width: 400px;
     padding-right: 0px;
     text-align: center;
@@ -46,35 +55,42 @@ img {
     width: 400px;
 }
 .logo-short{
-    width: 50px;
+    max-width: 50px;
+    
+}
+.img-short{
+    max-width: 50px;
     
 }
 
 
 
-.links > a {
+nav > a {
     text-decoration: none;
     color: white;
 }
-.links > a:hover {
+nav > a:hover {
     color: #48a8b5;
 }
 
 
-.links{
+nav{
     justify-content: end;
     display: flex;
     gap: 30px;
     width: 400px;
 }
 
+nav.responsiva{
+    display: none;
+}
 
 main {
     text-align: center;    
     background-color: white;
-    width: 1300px;
+    max-width: 1300px;
     height: auto;
-    margin: auto;
+    margin: 150px auto 0;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
     box-shadow: 1px 1px 10px rgb(155, 155, 155);
@@ -94,24 +110,24 @@ main.formulario{
     gap: 12px;
     height:500px;
     padding: 70px 0px;  
-    width: 500px;  
+    max-width: 500px;  
     margin: auto;
     
     
 }
 
 .primeira-sessao > img {
-    width: 500px;
+    max-width: 100%;
     margin: 20px auto;
 }
 .primeira-sessao > p{
-    width: 400px;
+    max-width: 400px;
     padding-right: 0px;
 }
 
 .slogan{
     font-size: 1.7rem;
-    width: 600px;
+    max-width: 600px;
     text-align: right;
     font-style: italic;
     
@@ -131,12 +147,16 @@ main.formulario{
 
 .banner{
     background-image: linear-gradient(-95deg, #282525, #4d4c4c);
-    height: 600px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+    min-height: 600px;
     margin-bottom: 30px;
+    box-sizing: border-box;
+    padding: 60px ;
+    padding-top: 120px;
+}
 
+.banner > img {
+    float: right;
+    
 }
 
 .conteudo-bruto-split > img{
@@ -154,6 +174,8 @@ main.formulario{
     display: flex;
     flex-direction: column;
     text-align: left;
+    max-width: 700px;
+
 }
 
 .texto-banner > p{
@@ -176,7 +198,7 @@ main.formulario{
     border-radius: 30px;
     padding: 10px 20px;
     text-align: center;
-    width: 100px;    
+    max-width: 100px;    
     text-decoration: none;
     font-size: 1.5em;    
     box-shadow: 1px 2px 5px #2b2c2cbb;
@@ -187,12 +209,14 @@ main.formulario{
 
 
 .conteudo-bruto {
-    width: 650px;
+    max-width: 650px;
     margin: 20px auto;
     text-align: left;
+    box-sizing: border-box;
+    padding: 0 20px;
 }
 .conteudo-bruto-split {
-    width: 650px;
+    max-width: 650px;
     margin: 100px auto;
     text-align: right;
     display: flex;
@@ -230,7 +254,7 @@ h2{
 
 
 .campos-de-precos > table{
-    width: 600px;
+    max-width: 600px;
     margin: auto;
     border-collapse: collapse;
     margin-bottom: 40px;
@@ -263,7 +287,7 @@ fieldset {
 
 .pag-form{
     padding-top: 40px;
-    width:  700px;
+    max-width:  700px;
     border-radius: 12px;
     margin-bottom: 40px; 
     
@@ -272,19 +296,19 @@ fieldset {
 .titulo-form {
     font-size: 2.3em;
     color: #48a8b5;
-    width: 700px;
+    max-width: 700px;
     margin: auto;
 }
 
 
 
 .formulario {
-    width: 700px;
+    max-width: 700px;
     margin: auto;
 }
 
 .dividir-tela{
-    width: 300px;
+    max-width: 300px;
     margin: 20px auto 20px auto;
     display: flex;
     gap: 40px;
@@ -320,14 +344,14 @@ fieldset {
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-around;
-    width: 360px;
+    max-width: 360px;
     margin:  30px auto;
     color: #48a8b5;
 }
 
 #mensagem{
     resize: none;
-    width: 360px;
+    max-width: 360px;
     border-color: #48a8b5;
     border-radius: 5px;
     max-lines: 5;
@@ -365,7 +389,7 @@ fieldset {
 
 .markers{
     padding: 20px;
-    width: 500px;
+    max-width: 500px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -378,9 +402,59 @@ fieldset {
     text-align: start;
 }
 
-.copyright > p{
-    width: 500px;
+footer > p{
+    max-width: 500px;
     margin: auto;
     margin-right: 30px;
     color: darkgrey;
+}
+
+@media (max-width:1200px){
+    .banner{
+    max-width: 10000px;
+    }
+    .banner img{
+     float: none;
+     margin-bottom: 50px;
+    }
+    .texto-banner{
+     margin: auto;
+    }
+
+    header{
+        display: inline;
+        
+    }
+    header h1{
+        max-width: 600px;
+        margin: 0 auto;
+        position: relative;
+
+        top: 16px;
+    }
+
+
+    header a{
+        display: none;
+        
+    }
+
+    nav.responsiva{
+        display: block;
+        float: right;
+        width: 60px;
+        position: relative;
+        bottom: 26px;
+    }
+    
+
+}
+
+@media (max-width:690px){
+    .conteudo-bruto-split{
+        flex-direction: column;
+    }
+    .conteudo-bruto-split p{
+        max-width: 300px;
+    }
 }
