--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,7 @@ footer > p{
         display: flex;
         align-items: center;
         justify-content: center;
+        padding: 0 10px;
 
         
     }
