--- a/css/style.css
+++ b/css/style.css
@@ -425,6 +425,13 @@ footer > p{
     border-radius: 0px 0px 0px 30px;
     
 }
+footer a {
+    text-decoration: none;
+    color: darkgray;
+}
+footer a:hover {
+    color: #48a8b5;
+}
 
 @media (max-width:1200px){
 
