--- a/css/style.css
+++ b/css/style.css
@@ -147,27 +147,23 @@ main.formulario{
 }
 
 .banner{
-    background-image: linear-gradient(-95deg, #282525, #4d4c4c);
+
+    box-sizing: border-box;
+
+    
+    background-image: url(../Imagens/banner-bg.jpg);
     min-height: 600px;
     margin-bottom: 30px;
     box-sizing: border-box;
-    padding: 60px ;
-    padding-top: 120px;
+    background-size: cover;
+
+    background-attachment: fixed;
 }
 
-.banner > img {
+.banner img {
     float: right;
     
 }
-
-.conteudo-bruto-split > img{
-    border-radius: 30px;
-    
-}
-
-
-
-
 
 .texto-banner {
     
@@ -178,6 +174,38 @@ main.formulario{
     max-width: 700px;
 
 }
+.conteudo-bruto-split > img{
+    border-radius: 30px;
+    
+    
+}
+
+.imagem-fundo {
+    
+
+    background-image: url(../Imagens/background.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+    box-shadow: inset 70px 70px 80px #0000005d;
+
+    margin: 0 0 40px;
+}
+
+.reader {
+    box-sizing: border-box;
+    background-color: #000000c4;
+    padding: 40px;
+
+    width: 100%;
+    height: 100%;
+}
+
+
+
+
+
 
 .texto-banner > p{
     font-size: 3em;
@@ -211,10 +239,14 @@ main.formulario{
 
 .conteudo-bruto {
     max-width: 650px;
-    margin: 20px auto;
+    margin: 60px auto;
     text-align: left;
     box-sizing: border-box;
-    padding: 0 20px;
+    padding: 10px 20px;
+
+    border-bottom: 1px solid;
+    border-top: 1px solid;
+
 }
 .conteudo-bruto-split {
     max-width: 650px;
@@ -223,6 +255,7 @@ main.formulario{
     display: flex;
     gap: 50px;
     align-items: center;
+    color: white;
     
 }
 
@@ -236,9 +269,8 @@ h2{
 
 #lista-vantagens{    
     font-size: 16px;
-    border-bottom: 1px solid;
-    padding-bottom: 40px;
-    margin-bottom: 40px;
+    
+    
 }
 #lista-vantagens > li{
     margin: 5px 0px;
@@ -247,6 +279,8 @@ h2{
 
 .campos-de-precos{
     padding: 0 20px;
+    max-width: 600px;
+    margin: 0 auto;
 }
 
     
@@ -257,7 +291,7 @@ h2{
 
 
 .campos-de-precos > table{
-    max-width: 600px;
+    width: 100%;
     margin: auto;
     border-collapse: collapse;
     margin-bottom: 40px;
@@ -354,7 +388,7 @@ fieldset {
 
 #mensagem{
     resize: none;
-    max-width: 360px;
+    width: 100%;
     border-color: #48a8b5;
     border-radius: 5px;
     max-lines: 5;
@@ -442,12 +476,12 @@ footer a:hover {
         padding: 20px;
     }
     .banner img{
-     float: none;
-     margin: auto;
-     margin-bottom: 50px;
+        float: none;
+        margin: auto;
+        margin-bottom: 50px;
     }
     .texto-banner{
-     margin: auto;
+        margin: auto;
     }
 
     header{ 
