--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,8 @@ main.formulario{
 
     
     background-image: url(../Imagens/banner-bg.jpg);
-    min-height: 600px;
+
+
     margin-bottom: 30px;
     box-sizing: border-box;
     background-size: cover;
@@ -185,7 +186,6 @@ main.formulario{
 
     background-image: url(../Imagens/background.jpeg);
     background-size: cover;
-    background-repeat: no-repeat;
     background-attachment: fixed;
 
     box-shadow: inset 70px 70px 80px #0000005d;
@@ -198,8 +198,8 @@ main.formulario{
     background-color: #000000c4;
     padding: 40px;
 
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 
@@ -473,7 +473,6 @@ footer a:hover {
 
     .banner{
         max-height:  10000px;
-        padding: 20px;
     }
     .banner img{
         float: none;
